force-app/main/default/objects/AI_Scheduler__c/AI_Scheduler__c.object-meta.xml
<CustomObject>
    <label>AI Mass Processing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Mass Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>