force-app/main/default/objects/AI_Scheduler__c/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>