force-app/main/default/objects/AI_Scheduler__c/fields/Schedule_Detail__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Detail__c</fullName>
    <label>Schedule Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>