force-app/main/default/objects/AI_Scheduler__c/fields/Schedule_time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_time__c</fullName>
    <label>Schedule time</label>
    <type>Time</type>
</CustomField>