force-app/main/default/objects/AI_Scheduler__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scheduling_Frequency__c</columns>
    <columns>Schedule_Detail__c</columns>
    <columns>Schedule_time__c</columns>
    <columns>Cron_Expression__c</columns>
    <columns>Scheduled_Timezone__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>